# tune-stress-api

./: .gitignore  README copy.md  README.md  auth.py  database.py  index.html  install.sh  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py  run.sh  schemas.py  send_test_data.sh  setup.py  streamlit_app.py  stressapi.db  tailwind.config.ts  vite.config.ts
app/: main.py
app/core/: database.py
app/models/: metrics.py
app/services/: metrics_service.py
backend/api_tester/: data_generator.py  main.py  schema_parser.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  types.ts
project/: package-lock.json  package.json  server.js
project/lib/: loadTest.js
project/public/: app.js  index.html  styles.css
scripts/: run_backend.sh  setup_env.sh
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: About.tsx  CTA.tsx  CTAButton.tsx  CodeSnippet.tsx  Dashboard.tsx  EndpointList.tsx  ErrorDistributionChart.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  InteractionModes.tsx  Navbar.tsx  ReportExport.tsx  ResponseTimeChart.tsx  ResultsView.tsx  SummaryMetricsCard.tsx  SystemResourceChart.tsx  TestConfigModal.tsx  TestConfigPanel.tsx  TestForm.tsx  Testimonials.tsx  URLInput.tsx
src/contexts/: AuthContext.tsx
static/: dashboard.js  index.html  styles.css
stressapi/: __init__.py
stressapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
supabase/: config.toml
templates/: dashboard.html  index.html
(+33 files in other folders)
