[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stressapi"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "High-Performance Load Testing Tool for FastAPI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.6.0",
    "pydantic>=2.4.2",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.6",
]

[project.scripts]
stressapi = "stressapi.cli.main:app"
